# NIRS

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/nb15/: create_random10.py  merge_files.py
experiments/: run_nids.py  run_nirs.py
figures/: fig2_overview.py  fig3_tpr_vs_fpr.py  fig4_cbr_wbr_vs_fpr.py  fig5_blocked_by_type.py
nids/: datasets.py  preprocess.py  utils.py
nirs/: __init__.py  datasets.py  eval.py  network.py  parse_args.py
nirs/iptables/: __init__.py  match.py  parser.py  rule.py
nirs/nirs/: base.py  heuristic.py  llm.py
nirs/nirs/agent/: __init__.py  config.py  graph.py  prompt.py  runtime.py  tools.py
nirs/ollama/: prompt.py  query.py
tests/: test_match.py  test_network.py  test_parser.py  test_query.py
