[project]
name = "nirs"
version = "0.1.0"
description = "Network Intrusion Response Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.10.5",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
]
