[project]
name = "nirs"
version = "0.1.0"
description = "Network Intrusion Response Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.10.5",
    "langchain>=1.0.8",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
